--- a/prototype.html
+++ b/prototype.html
@@ -1,14 +1,1 @@
-<html>
-    <head>
-      <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    </head>
-    <body>
-      <a-scene>
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-        <a-sky color="#543285"></a-sky>
-      </a-scene>
-    </body>
-  </html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/a-frame/manifest.json"><link rel="shortcut icon" href="/a-frame/favicon.ico"><script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script><script src="https://cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script><script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.0/dist/aframe-extras.min.js"></script><script src="https://d3js.org/d3.v4.min.js"></script><title>React App</title><script defer="defer" src="/a-frame/static/js/main.c23a5dd3.js"></script><link href="/a-frame/static/css/main.fc5c2c69.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root" style="height:100%;width:100%"></div></body></html>
